# audio-transcription

./: .env.example  .gitignore  Cargo.toml  README.md  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.kiro/specs/audio-level-monitor/: design.md  requirements.md  tasks.md
.kiro/specs/audio-transcription-cli/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
apps/desktop/: Cargo.toml  README.md  package.json  tauri.conf.json
apps/desktop/src/: lib.rs
apps/tauri-react/: README.md  package.json  tsconfig.json  vite.config.ts
apps/tauri-react/src/: routeTree.gen.ts  router.tsx  setup.test.ts
apps/tauri-react/src/components/: Header.tsx  demo.FormComponents.tsx
apps/tauri-react/src/routes/: __root.tsx  demo.apollo-client.tsx
src/: audio_processor.rs  error.rs  file_browser.rs  lib.rs  main.rs  model_manager.rs  progress_display.rs  transcript_generator.rs
src/cli/: file_browser.rs  mod.rs
src/core/: audio_processor.rs  mod.rs  model_manager.rs  transcript_generator.rs
src/core/model/: download.rs  mod.rs  model_manager.rs
src/ui/: mod.rs
