[package]
name = "audio-transcription-cli"
version = "0.1.0"
edition = "2021"
authors = ["Audio Transcription CLI Team"]
description = "High-performance audio transcription CLI with speaker diarization"
license = "MIT"

[[bin]]
name = "audio-transcribe"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Terminal UI and interaction
crossterm = "0.27"

# Audio processing
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"

# Machine learning models
# whisper-rs = "0.10"  # Temporarily disabled - requires cmake
# Note: pyannote-rs is not available yet, will use placeholder for now
# pyannote-rs = "0.1"

# Parallel processing
rayon = "1.8"
tokio = { version = "1.35", features = ["full"] }

# HTTP client for model downloads
reqwest = { version = "0.11", features = ["stream"] }

# File system and path handling
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress indicators
indicatif = "0.17"

# Logging
log = "0.4"
env_logger = "0.10"

# System information
num_cpus = "1.16"

[dev-dependencies]
# Property-based testing
proptest = "1.4"
tempfile = "3.8"