[package]
name = "audio-transcription-cli"
version = "0.1.0"
edition = "2021"
authors = ["Audio Transcription CLI Team"]
description = "High-performance audio transcription CLI with speaker diarization"
license = "MIT"

[lib]
name = "audio_transcription_cli"
path = "src/lib.rs"

[[bin]]
name = "audio-transcribe"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Terminal UI and interaction
crossterm = "0.29"

# Audio processing
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"

# Machine learning models
whisper-rs = "0.15"
pyannote-rs = "0.3"  

# Parallel processing
rayon = "1.8"
tokio = { version = "1.35", features = ["full"] }

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Hugging Face Hub API for model downloads
hf-hub = { version = "0.4", features = ["tokio"] }

# File system and path handling
dirs = "6.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress indicators
indicatif = "0.18"

# Logging
log = "0.4"
env_logger = "0.11"

# System information
num_cpus = "1.16"

# Environment variables
dotenv = "0.15"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Property-based testing
proptest = "1.4"
tempfile = "3.8"
tokio-test = "0.4"